<resources>
    <string name="app_name">AndroidDay5</string>
    <string name="numberTwo">Enter the second number</string>
    <string name="numberOne">Enter the first number</string>
    <string name="tv_title">Basic Calculator Application</string>
    <string name="tv_facebook">Facebook</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>