<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ex1.B1Activity">


    <Button
        android:id="@+id/btn_SubTracTion"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Addition"
        app:layout_constraintStart_toEndOf="@+id/btn_Addition"
        app:layout_constraintTop_toTopOf="@+id/btn_Addition" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tv_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_NumberOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/numberOne"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_NumberTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/numberTwo"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_NumberOne" />

    <TextView
        android:id="@+id/tv_ShowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_NumberTwo" />

    <Button
        android:id="@+id/btn_Addition"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="+"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ShowResult" />

    <Button
        android:id="@+id/btn_Multiplication"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="*"
        app:layout_constraintBottom_toBottomOf="@+id/btn_SubTracTion"
        app:layout_constraintStart_toEndOf="@+id/btn_SubTracTion"
        app:layout_constraintTop_toTopOf="@+id/btn_SubTracTion" />

    <Button
        android:id="@+id/btn_Division"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="/"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Multiplication"
        app:layout_constraintStart_toEndOf="@+id/btn_Multiplication"
        app:layout_constraintTop_toTopOf="@+id/btn_Multiplication" />
</androidx.constraintlayout.widget.ConstraintLayout>