<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3b5998"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".ex2.B2Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tv_facebook"
        android:textColor="#ffffff"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_Password"
        app:layout_constraintStart_toStartOf="@+id/edt_Password"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edt_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_Login"
        app:layout_constraintStart_toStartOf="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@+id/edt_Email" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#2A3FB1"
        android:text="Login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="#4056D5"
        android:text=" ? "
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_SignUp" />

    <EditText
        android:id="@+id/edt_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Sign Up for Facebook "
        android:editable="false"
        android:focusable="false"
        android:textAlignment="center"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />
</androidx.constraintlayout.widget.ConstraintLayout>